# docula

./: Cargo.toml
src/: lib.rs  main.rs
src/adr/: adr.rs  command.rs  directory.rs  indextype.rs  init.rs  list.rs  mod.rs  model.rs  new.rs  state.rs
src/adr/handler/: init.rs  list.rs  new.rs
src/command/: mod.rs
src/command/adr/: init.rs  list.rs  mod.rs  new.rs
src/command/markdown/: fmt.rs  lint.rs  mod.rs
src/markdown/: command.rs  fmt.rs  mod.rs
src/markdown/handler/: fmt.rs  lint.rs
src/markdown/linter/: hlevels.rs  link.rs  mod.rs
src/markdown/parser/: lexer.rs  token.rs
src/state/: mod.rs  model.rs  state.rs
tests/: adr_init_test.rs
