[package]
name = "docula-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "docula"
path = "src/lib.rs"

[[bin]]
name = "docula"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4.22"
regex = "1.6.0"
Inflector = "0.11.4"
tabled = { version = "0.8.0", features = ["color"]}
ansi_term = "0.12.1"
url = "2.2.2"

[dev-dependencies]
assert_cmd = "2.0.4"
tempdir = "0.3.7"
assert_fs = "1.0.7"
